assets/css/p-home.css
/* --- Intro ------------------------- */

#fullpage {}
.intro {
  display: table;
  position: relative;
  height: 100vh !important;
  width: 100%;
  max-width: 770px;
  margin: 0 auto;
  overflow: hidden;
  /* padding-top: 217px; */
  /* margin-bottom: 90px; */
  box-sizing: border-box;
}
.intro .fp-tableCell {
  display: table;
  width: 100%;
  text-align: center;
}
.intro .box {
  position: relative;
  display: table-cell;
  vertical-align: middle;
  padding-top: 64px;
  /* box-shadow: 0px -1px #e8eef1 inset; */
}
.intro .non {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  width: 76%;
  max-width: 470px;
  margin: 0 -0.5%;
}
.intro .non:after {
  content: "";
  display: block;
  clear: both;
}
.intro .smoke {
  position: relative;
  width: 106%;
  margin-top: -9%;
  margin-left: -3%;
  z-index: 0;
}
.intro .bg,
.intro .fg {
  position: absolute;
  display: block;
  left: 0;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 0.8;
}
.intro .fg {
  opacity: 0.7;
}
.intro .non > div {
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  overflow: hidden;
}
.intro .non svg {
  position: absolute;
  top: -0.5%;
  left: -0.5%;
  width: 101%;
  height: 101%;
  /* top: 50%; */
  /* left: 50%; */
  /* margin-left: -150px; */
  /* margin-top: -150px; */
  z-index: 1;
}
.intro .n1,
.intro .n2 {
  display: inline-block;
  vertical-align: middle;
  margin-top: -3%;
  width: 10%;
  max-width: 65px;
  position: relative;
  z-index: 2;
}
.intro .n1 > div,
.intro .n2 > div {
  display: block;
  width: 100%;
  height: 0;
  padding-bottom: 100%;
}
.intro .n1 svg,
.intro .n2 svg {
  display: block;
}
.intro .n1 {}
.intro .n2 {}
.intro h1 {
  margin: 0 auto;
  max-width: 570px;
  margin-top: 40px;
  margin-bottom: 50px;
  font-size: 22px;
  line-height: 34px;
  font-weight: 400;
  letter-spacing: 1px;
}
.intro .mouse {
  position: absolute;
  bottom: 86px;
  left: 50%;
  margin-left: -23px;
  height: 30px;
  width: 18px;
  padding: 14px;
  box-sizing: content-box;
  opacity: 0.8;
  transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0.2s;
  z-index: 20;
  cursor: pointer;
}
.sliding .mouse {
  transform: translateY(15px);
  opacity: 0;
  transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0s;
}
.intro .mouse div {
  position: relative;
  height: 100%;
  width: 100%;
  border: 2px solid #3d3d3d;
  border-radius: 20px;
  box-sizing: border-box;
}
.intro .mouse span {
  position: absolute;
  left: 6px;
  top: 6px;
  height: 2px;
  width: 0;
  border: 1px solid #3d3d3d;
  border-radius: 20px;
  animation: scrollr 3s linear infinite;
}

/* Loaded */

.intro .non {
  opacity: 0;
  transform: translateY(-20px);
  transition: all 0.8s cubic-bezier(.215, .61, .355, 1) 0.2s;
}
.intro .n1,
.intro .n2 {
  opacity: 0;
  transform: translateY(-20px);
  transition: all 0.8s cubic-bezier(.215, .61, .355, 1) 0.2s;
}
.intro h1 {
  opacity: 0;
  transform: translateY(-20px);
  transition: transform 0.8s cubic-bezier(.215, .61, .355, 1) 0.4s, opacity 0.8s cubic-bezier(.215, .61, .355, 1) 0.4s;
}
.loaded .intro .n1,
.loaded .intro .n2,
.loaded .intro .non,
.loaded .intro h1 {
  opacity: 0.99;
  transform: translateY(0);
}
@keyframes scrollr {
  0% {
    opacity: 1;
    transform: translateY(0)
  }
  12% {
    opacity: 0;
    transform: translateY(10px)
  }
  15% {
    opacity: 0;
    transform: translateY(0)
  }
  22% {
    opacity: 1;
    transform: translateY(0)
  }
  100% {
    opacity: 1;
    transform: translateY(0)
  }
}
@media only screen and (max-width: 1440px) {
  .intro {}
  .intro .box {}
  .intro h1 {
    max-width: 540px;
    margin-top: 0px;
    margin-bottom: 84px;
    font-size: 21px;
    line-height: 34px;
  }
}
@media only screen and (max-width: 1280px) {
  .intro .mouse {
    bottom: 69px;
  }
}
@media only screen and (max-width: 1000px) {
  .intro {
    max-width: 597px;
  }
  .intro .box {}
  .intro h1 {
    max-width: 540px;
    margin-top: 22px;
    margin-bottom: 70px;
    font-size: 21px;
    line-height: 34px;
  }
}
@media only screen and (max-width: 770px) {
  .intro .box {
    padding-left: 38px;
    padding-right: 38px;
  }
}
@media only screen and (max-width: 700px) {
  .intro .mouse {
    bottom: 25px;
  }
}
@media only screen and (max-width: 520px) {
  .intro h1 {
    max-width: 540px;
    margin-top: 7px;
    margin-bottom: 70px;
    font-size: 19px;
    line-height: 30px;
    letter-spacing: 0;
  }
}

/* --- Featured ---------------------- */

.featured {
  display: table;
  position: relative;
  height: 100vh;
  width: 100%;
}
.featured > div {
  display: table-cell;
  vertical-align: middle;
}
.featured .box {
  position: relative;
}
.featured .box:after {
  content: "";
  display: block;
  clear: both;
}
.featured .left {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 20%;
  text-align: left;
}
.featured .left p  {margin: 0;margin-top: 0px;}
.featured .left h2 {}
.featured .left .more {
  position: absolute;
  font-size: 16px;
  bottom: 0;
}
.featured .left .more svg {
  width: 28px;
  height: auto;
  display: inline-block;
  vertical-align: middle;
  padding-left: 17px;
  transition: transform .3s cubic-bezier(.215, .61, .355, 1);
}
.featured .left .more:hover svg {
  transform: translateX(6px);
}
.featured .left .list {
  position: absolute;
  display: table;
  top: 0;
  width: 192%;
  height: 100%;
  padding-top: 24px;
  box-sizing: border-box;
}
.featured .left ul {
  display: table-cell;
  vertical-align: middle;
}
.featured .left ul li {
  position: relative;
  display: block;
  width: 100%;
  z-index: 10;
}
.featured .left ul li:after {
  display: block;
  content: "";
  clear: both;
}
.featured .left ul li:nth-child(even),
.featured .left ul li:nth-child(odd) {
  transform: scale3d(1, 1, 1);
}
.featured .left ul li a {
  position: relative;
  display: block;
  float: left;
  font-size: 22px;
  line-height: 1.2em;
  font-family: Noto Sans;
  font-weight: bold;
  padding-bottom: 10px;
  margin-bottom: 12px;
  margin-right: 20px;
}
/* ... */

